# DocuSphere-Scalable-Document-Intelligence

./: .gitignore  README.md  data_loader.py  doc.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  vector_db.py
rag-engine/: .gitignore  Makefile  README.md  pyproject.toml
rag-engine/.github/workflows/: ci.yml
rag-engine/docker/: Dockerfile  docker-compose.yml
rag-engine/src/rag_engine/: __init__.py  config.py
rag-engine/src/rag_engine/api/: app.py
rag-engine/src/rag_engine/api/middleware/: __init__.py  error_handler.py  logging.py
rag-engine/src/rag_engine/api/routes/: __init__.py  documents.py  health.py  query.py
rag-engine/src/rag_engine/core/: __init__.py  document_loader.py  embeddings.py  rag_chain.py
rag-engine/src/rag_engine/models/: __init__.py  schemas.py
rag-engine/src/rag_engine/ui/: streamlit_app.py
rag-engine/src/rag_engine/utils/: __init__.py  logger.py
rag-engine/tests/integration/: test_api.py
rag-engine/tests/unit/: test_document_loader.py  test_rag_chain.py  test_vector_store.py
